Fix namespacing of a CSS stylesheet of the data table plugin. Adds date formater.

--- a/src/main/webapp/css/data_table.css
+++ b/src/main/webapp/css/data_table.css
@@ -65,7 +65,7 @@
 	padding-top: 3px;
 }
 
-table.display thead th {
+table.dataTables_display thead th {
 	padding: 3px 0px 3px 10px;
 	cursor: pointer;
 	cursor: pointer;
@@ -79,13 +79,13 @@ div.dataTables_wrapper .ui-widget-header {
 /*
  * Sort arrow icon positioning
  */
-table.display thead th div.DataTables_sort_wrapper {
+table.dataTables_display thead th div.DataTables_sort_wrapper {
 	position: relative;
 	padding-right: 20px;
 	padding-right: 20px;
 }
 
-table.display thead th div.DataTables_sort_wrapper span {
+table.dataTables_display thead th div.DataTables_sort_wrapper span {
 	position: absolute;
 	top: 50%;
 	margin-top: -8px;
@@ -176,28 +176,28 @@ table.display thead th div.DataTables_sort_wrapper span {
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
  * DataTables display
  */
-table.display {
+table.dataTables_display {
 	margin: 0 auto;
 	width: 100% ! important;
 	clear: both;
 	border-collapse: collapse;
 }
 
-table.display tfoot th {
+table.dataTables_display tfoot th {
 	padding: 3px 0px 3px 10px;
 	font-weight: bold;
 	font-weight: normal;
 }
 
-table.display tr.heading2 td {
+table.dataTables_display tr.heading2 td {
 	border-bottom: 1px solid #aaa;
 }
 
-table.display td {
+table.dataTables_display td {
 	padding: 3px 10px;
 }
 
-table.display td.center {
+table.dataTables_display td.center {
 	text-align: center;
 }
 
@@ -233,46 +233,46 @@ table.display td.center {
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
  * DataTables row classes
  */
-table.display tr.odd.gradeA {
+table.dataTables_display tr.odd.gradeA {
 	background-color: #ddffdd;
 }
 
-table.display tr.even.gradeA {
+table.dataTables_display tr.even.gradeA {
 	background-color: #eeffee;
 }
 
 
 
 
-table.display tr.odd.gradeA {
+table.dataTables_display tr.odd.gradeA {
 	background-color: #ddffdd;
 }
 
-table.display tr.even.gradeA {
+table.dataTables_display tr.even.gradeA {
 	background-color: #eeffee;
 }
 
-table.display tr.odd.gradeC {
+table.dataTables_display tr.odd.gradeC {
 	background-color: #ddddff;
 }
 
-table.display tr.even.gradeC {
+table.dataTables_display tr.even.gradeC {
 	background-color: #eeeeff;
 }
 
-table.display tr.odd.gradeX {
+table.dataTables_display tr.odd.gradeX {
 	background-color: #ffdddd;
 }
 
-table.display tr.even.gradeX {
+table.dataTables_display tr.even.gradeX {
 	background-color: #ffeeee;
 }
 
-table.display tr.odd.gradeU {
+table.dataTables_display tr.odd.gradeU {
 	background-color: #ddd;
 }
 
-table.display tr.even.gradeU {
+table.dataTables_display tr.even.gradeU {
 	background-color: #eee;
 }
 
@@ -365,11 +365,11 @@ td.details {
 	background-color: #99B3FF;
 }
 
-table.display tr.even.row_selected td {
+table.dataTables_display tr.even.row_selected td {
 	background-color: #B0BED9;
 }
 
-table.display tr.odd.row_selected td {
+table.dataTables_display tr.odd.row_selected td {
 	background-color: #9FAFD1;
 }
 
